Closed
Bug 1314427
Opened 8 years ago
Closed 8 years ago
Assertion failure in TextureClient::InitIPDLActor when the GPU process aborts
Categories
(Core :: Graphics: Layers, defect)
Core
Graphics: Layers
Tracking
()
RESOLVED
FIXED
mozilla53
Tracking | Status | |
---|---|---|
firefox53 | --- | fixed |
People
(Reporter: dvander, Assigned: dvander)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
2.02 KB,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
Assignee | ||
Comment 1•8 years ago
|
||
I've also seen this assert [1], possibly related. Job is at [2].
Trying some diagnostics: probably this is a TextureClient created before a process restart, and someone is trying to use it again after.
[1] http://searchfox.org/mozilla-central/rev/f5c9e9a249637c9abd88754c8963ecb3838475cb/gfx/layers/client/TextureClient.cpp#863
[2] https://treeherder.mozilla.org/#/jobs?repo=try&author=danderson@mozilla.com&selectedJob=30614139
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Assignee | ||
Updated•8 years ago
|
Assignee: dvander → nobody
Status: ASSIGNED → NEW
Assignee | ||
Comment 2•8 years ago
|
||
I can reproduce this now. Happens when canvas is active and the GPU process aborts. TextureClient ends up holding a previous TextureForwarder, and a new one has since been created.
Seems easiest to just early return if IPC isn't open, but I don't know this code well.
With this the content process no longer crashes, but canvas stops rendering until the page is refresh.
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Attachment #8810727 -
Flags: review?(nical.bugzilla)
Updated•8 years ago
|
Attachment #8810727 -
Flags: review?(nical.bugzilla) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c99f95ab0b90
Fix canvas crashing when the GPU process aborts. (bug 1314427, r=nical)
Comment 4•8 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in
before you can comment on or make changes to this bug.
Description
•