Fix canvas crashing when the GPU process aborts. (bug 1314427, r=nical)